--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -21,6 +21,7 @@ jobs:
     - name: Install Python
       run: |
         pip install bs4
+        pip install pandas
         python teste1.py
 
         
