--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -22,7 +22,8 @@ jobs:
       run: |
         pip install bs4
         pip install pandas
-        python teste1.py
+        pip install
+        openpyxlpython teste1.py
 
         
         
