--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         pip install bs4
         pip install pandas
-        pip install openpyxlpython 
+        pip install openpyxl 
         python teste1.py
 
         
