--- a/.github/workflows/manual2.yml
+++ b/.github/workflows/manual2.yml
@@ -21,6 +21,7 @@ jobs:
     - name: Install Python
       run: |
         pip install requests bs4 vimeo_dl
+        pip install urlparse4
         python vimeodl.py [-h] [-o SAVE_PATH] [-r] https://vimeo.com/734781659
 
         
