--- a/.github/workflows/manual2.yml
+++ b/.github/workflows/manual2.yml
@@ -20,6 +20,7 @@ jobs:
         git config --global user.name "GitHub Action"
     - name: Install Python
       run: |
+        $ sudo apt-get install python3
         python teste2.py 
         pip install ps4
 
