--- a/.github/workflows/manual2.yml
+++ b/.github/workflows/manual2.yml
@@ -19,13 +19,10 @@ jobs:
         git config --global user.email "action@github.com"
         git config --global user.name "GitHub Action"
     - name: Install Python
-      run: |
-            install python3-pip
-    - name: Executando Python
-      run: |
-             python teste2.py 
-    - name: Instalando bs4
-      run: |
+            pip install bs4
+            pip install pandas
+            pip install openpyxl 
+            pip install -U selenium
             pip install bs4
 
         
