--- a/.github/workflows/manual2.yml
+++ b/.github/workflows/manual2.yml
@@ -19,11 +19,12 @@ jobs:
         git config --global user.email "action@github.com"
         git config --global user.name "GitHub Action"
     - name: Install Python
-            pip install bs4
-            pip install pandas
-            pip install openpyxl 
-            pip install -U selenium
-            pip install bs4
+      run: |
+        pip install bs4
+        pip install pandas
+        pip install openpyxl 
+        pip install -U selenium
+        python teste2.py
 
         
         
