--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -24,6 +24,7 @@ jobs:
         pip install pandas
         pip install openpyxl 
         pip install -U selenium
+        install xlsx
         python teste1.py
 
         
