--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -24,6 +24,9 @@ jobs:
         pip install pandas
         pip install openpyxl 
         pip install -U selenium
+        sudo apt update
+        sudo apt install snapd
+        sudo snap install xlsx
         python teste1.py
 
         
