--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -24,7 +24,7 @@ jobs:
         pip install pandas
         pip install openpyxl 
         pip install -U selenium
-        python teste1.py
+        estudo_beautifulsoup_e_selenium.ipynb
 
         
         
