--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -25,7 +25,7 @@ jobs:
         pip install openpyxl 
         pip install -U selenium
         python teste1.py
-        $ libreoffice --convert-to pdf noticias.xlsx
+        libreoffice --convert-to pdf noticias.xlsx
         
         
                    
