--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -28,6 +28,8 @@ jobs:
 
     - name: Convert xlsx
       run: |
+        sudo apt update
+        sudo apt install libreoffice
         libreoffice --convert-to pdf noticias.xlsx
         
         
