--- a/.github/workflows/manual2.yml
+++ b/.github/workflows/manual2.yml
@@ -23,6 +23,7 @@ jobs:
          pip install bs4
          pip install pandas
          pip install docx2txt==0.8
+         pip install PyPDF2
          python teste2.py
 
         
