--- a/.github/workflows/manual2.yml
+++ b/.github/workflows/manual2.yml
@@ -30,6 +30,7 @@ jobs:
          pip install playsound
          pip install SpeechRecognition
          python -m tkinter
+         apt-get install python-tk
          python teste2.py
 
         
